// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Img Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <img
      class="sc-gsxnyZ dsPZMt"
      src=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Img With Fallback 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <img
      class="sc-gsxnyZ dsPZMt"
      src="imgthatfails"
    />
  </div>
</div>
`;
